feat(sorting):_implement_dynamic_sorting_for_GET_users